Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-16098

Commit ae2a85d Causes 5 additional failures in shell32_winetest shlview

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.13
    • Shell

    Description

      https://github.com/reactos/reactos/commit/ae2a85d003da762e4bcb232b15f1180333e5917a

      This changed the value returned from SHCreateShellFolderView when there is an early return of E_INVALIDARG. According to the shlview.c tests, the value returned for the second parameter should be NULL. So, moving the "*ppsv = NULL;" below the "if.. return E_INVALIDARG" causes tests that check for this to fail. Moving this line back above the "if" test fixes these failures for me.

      Attachments

        Activity

          People

            hbelusca hbelusca
            DougLyons DougLyons
            Votes:
            2 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: