[SHELL32] SHCreateShellFolderView(): Fix parameter validation order

This partially reverts ae2a85d003da762e4bcb232b15f1180333e5917a.

CORE-16098